reworked map search and comment list

--- a/prism-app/Views/CategoryDetailPage.xaml
+++ b/prism-app/Views/CategoryDetailPage.xaml
@@ -126,15 +126,15 @@
             <TextBlock x:Name="pageTitle" Text="{Binding Category.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
             <StackPanel x:Name="mapLock"  Grid.Column="2" Orientation="Horizontal" >
-                <TextBlock Text="Map" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <Button x:Uid="lockMap" Content="&#xf023;" FontFamily="{StaticResource AwesomeIcons}" FontSize="32" BorderBrush="{x:Null}" Visibility="{Binding HasSearchBounds, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <TextBlock x:Uid="MapLockLabel" Text="Map" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Button x:Uid="LockMap" Content="&#xf023;" FontFamily="{StaticResource AwesomeIcons}" FontSize="32" BorderBrush="{x:Null}" Visibility="{Binding MapLocked, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <i:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Click">
                             <core:InvokeCommandAction Command="{Binding UnlockMapCommand}" CommandParameter="{x:Null}" />
                         </core:EventTriggerBehavior>
                     </i:Interaction.Behaviors>
                 </Button>
-                <Button x:Uid="unlockMap" Content="&#xf09c;" FontFamily="{StaticResource AwesomeIcons}" FontSize="32" BorderBrush="{x:Null}" Visibility="{Binding HasSearchBounds, Converter={StaticResource BooleanToCollapsedConverter}}">
+                <Button x:Uid="UnlockMap" Content="&#xf09c;" FontFamily="{StaticResource AwesomeIcons}" FontSize="32" BorderBrush="{x:Null}" Visibility="{Binding MapLocked, Converter={StaticResource BooleanToCollapsedConverter}}">
                     <i:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Click">
                             <core:InvokeCommandAction Command="{Binding LockMapCommand}" CommandParameter="{x:Null}" />
