--- a/prism-app/Views/PictureDetailPage.xaml
+++ b/prism-app/Views/PictureDetailPage.xaml
@@ -45,9 +45,7 @@
 
         <StackPanel Grid.Row="1" x:Name="contentRegion" Orientation="Horizontal">
             <Image Source="{Binding Info.ImageUrl}" Stretch="Uniform" AutomationProperties.Name="{Binding Info.Title}" Margin="20,0" HorizontalAlignment="Left"/>
-            <ScrollViewer>
-                <local:PictureCommentUserControl DataContext="{Binding Comments}" x:Name="commentList" MinWidth="440" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
-            </ScrollViewer>
+            <local:PictureCommentUserControl DataContext="{Binding Comments}" x:Name="commentList" MinWidth="440" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
         </StackPanel>
 
         <!-- Back button and page title -->
@@ -86,7 +84,7 @@
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="20,0">
                 <FontIcon x:Uid="Online" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OnlineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
-                <FontIcon x:Uid="Offline" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OfflineGlyph}" Visibility="{Binding Offline, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
+                <FontIcon x:Uid="Offline" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OfflineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToCollapsedConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
                 <TextBlock Text="{Binding Creator}" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Vertical" Margin="20,0">
