--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -27,7 +27,10 @@
         <x:String x:Key="CountryGlyph">&#xf024;</x:String>
         <x:String x:Key="CameraGlyph">&#xf030;</x:String>
         <x:String x:Key="ResolutionGlyph">&#xf047;</x:String>
+        <x:String x:Key="HomeGlyph">&#xf015;</x:String>
+        <x:String x:Key="MapMarkerGlyph">&#xf041;</x:String>
         <x:String x:Key="HomePage">Socialalert.Views.HubPage</x:String>
+        <x:String x:Key="MapStatisticPage">Socialalert.Views.MapStatisticPage</x:String>
         <x:String x:Key="BingMapKey">AuXHB715SopOp7_UWBAwr0OzWS7-VZuepw59IdjV6E4DmYYGb0JVGuq5FUOF4TFT</x:String>
     </prism:MvvmAppBase.Resources>
 </prism:MvvmAppBase>
