--- a/prism-app/Views/PictureCommentUserControl.xaml
+++ b/prism-app/Views/PictureCommentUserControl.xaml
@@ -12,7 +12,7 @@
 			 prism:ViewModelLocator.AutoWireViewModel="True"
              d:DataContext="{Binding Source={d:DesignData Source=/Data/PictureCommentUserControl.json, Type=vm:PictureCommentUserControlViewModel}}"
 			 d:DesignHeight="600"
-			 d:DesignWidth="400">
+			 d:DesignWidth="430">
 
     <UserControl.Resources>
         <CollectionViewSource
@@ -28,7 +28,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+        <StackPanel Name="toolbar" Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal">
             <AppBarToggleButton Label="Like" IsChecked="{Binding IsLikeChecked, Mode=TwoWay}" Command="{Binding LikeCommand}">
                 <AppBarToggleButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xF087;"/>
@@ -108,15 +108,19 @@
 
                 <GridView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Height="110" Margin="10">
+                        <Grid Height="110" Margin="10" MinWidth="400">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="200"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="25"/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.RowSpan="2" Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
                                 <Image Source="{Binding ProfilePictureUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Creator}" HorizontalAlignment="Left"/>
                             </Border>
-                            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
+                            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" >
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
@@ -126,17 +130,13 @@
                                     <FontIcon x:Uid="Online" Grid.Column="0" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OnlineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
                                     <FontIcon x:Uid="Offline" Grid.Column="0" FontFamily="{StaticResource AwesomeIcons}" Glyph="{StaticResource ResourceKey=OfflineGlyph}" Visibility="{Binding Online, Converter={StaticResource BooleanToCollapsedConverter}}" Margin="0,0,10,0" VerticalAlignment="Center" />
                                     <TextBlock Grid.Column="1" Text="{Binding Creator}" TextWrapping="NoWrap" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-                                    <FontIcon x:Uid="Repost" Grid.Column="2" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf09e;" Margin="0,0,10,0" VerticalAlignment="Center" >
-                                        <i:Interaction.Behaviors>
-                                            <core:EventTriggerBehavior EventName="Tapped">
-                                                <core:InvokeCommandAction Command="{Binding RepostCommentCommand}"/>
-                                            </core:EventTriggerBehavior>
-                                        </i:Interaction.Behaviors>
-                                    </FontIcon>
+                                    <Button Grid.Column="2" BorderThickness="0" Command="{Binding RepostCommentCommand}" CommandParameter="{Binding CommentId}">
+                                        <FontIcon x:Uid="Repost" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf09e;" Margin="0,0,10,0" VerticalAlignment="Center" />
+                                    </Button>
                                 </Grid>
                                 <TextBlock Text="{Binding Comment}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
-                                <TextBlock Text="{Binding Creation}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Right" VerticalAlignment="Bottom" />
                             </StackPanel>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Creation}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Right" />
                         </Grid>
                     </DataTemplate>
                 </GridView.ItemTemplate>
